<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lessonViewModel"
            type="com.example.animalia.screens.lesson.LessonViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lesson_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/animal_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_image_lesson"
            android:src="@drawable/empty_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lessonImage="@{lessonViewModel.currentLesson}"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/empty_vector" />

        <TextView
            android:id="@+id/lesson_title_textview"
            style="@style/text_title"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:background="@color/secondaryLigthColor"
            android:layout_height="wrap_content"
            android:text="@{lessonViewModel.currentLesson.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/animal_image"
            tools:text="Here comes a title" />

        <ScrollView
            android:id="@+id/lesson_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@+id/home_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lesson_title_textview">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lesson_textview"
                    style="@style/text_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{lessonViewModel.currentLesson.content}"
                    tools:text="Here comes a lesson" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/previouslesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_bottom"
            android:layout_marginStart="26dp"
            android:width="140dp"
            android:onClick="@{()->lessonViewModel.getPreviousLesson()}"
            android:text="@string/button_lesson_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/home_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/home_button"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:backgroundTint="@color/secondaryLigthColor"
            app:icon="@drawable/ic_baseline_home_24"
            app:iconTint="@color/secondaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/nextlesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_bottom"
            android:layout_marginEnd="25dp"
            android:width="140dp"
            android:text="@string/button_lesson_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_button" />

        <Button
            android:id="@+id/finishlesson_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_bottom"
            android:layout_marginEnd="25dp"
            android:width="140dp"
            android:visibility="gone"
            android:text="@string/finished_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>