<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeViewModel"
            type="com.example.animalia.screens.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/backgroundHome"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:scaleType="centerCrop"
            android:src="@drawable/animals_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="wrap_content"
            android:layout_height="700dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/text_title"
            app:layout_constraintBottom_toBottomOf="@+id/background_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/background_image"
            app:layout_constraintVertical_bias="0.489" />

        <ImageView
            android:id="@+id/phone_image"
            android:layout_width="200dp"
            android:layout_height="240dp"
            android:src="@drawable/phone_cropped"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/start_lesson_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="52dp"
            android:text="@string/button_learn"
            app:layout_constraintTop_toBottomOf="@+id/background_image"
            app:layout_constraintBottom_toTopOf="@+id/start_truefalse_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/start_truefalse_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="52dp"
            android:text="@string/button_skill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_lesson_button"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>