...
        <variable
            name="truefalseViewModel"
            type="com.example.animalia.screens.truefalse.TruefalseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/truefalse_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity">

...
